--- a/package.json
+++ b/package.json
@@ -1,16 +1,14 @@
 {
-    "name": "healthy-recommender",
-    "version": "1.0.0",
-    "description": "Swiggy/Zomato recommender for Healthy Diet prototype",
-    "main": "server.js",
-    "scripts": {
-      "start": "node server.js"
-    },
-    "engines": { "node": ">=18" },
-    "dependencies": {
-      "cors": "^2.8.5",
-      "dotenv": "^16.4.5",
-      "express": "^4.19.2"
-    }
+  "name": "healthy-recommender",
+  "version": "1.0.0",
+  "type": "module",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js"
+  },
+  "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.19.2",
+    "node-fetch": "^3.3.2"
   }
-  
+}
